# grouped-regression-tree

./: .gitignore  CMakeLists.txt  build_profile.sh  demo.py  profile.sh  pyproject.toml
include/: GroupedRegressionTree.h
src/: GroupedRegressionTree.cpp  bindings.cpp  main.cpp
